@@ -11,12 +11,8 @@ public class Foo {
 }
      ]]></code>
     </test-code>
-    <test-code>
-        <description><![CDATA[
-Complicated method
-     ]]></description>
-        <expected-problems>2</expected-problems>
-        <code><![CDATA[
+    <code-fragment id="basic-violation">
+    <![CDATA[
 public class Foo {
  public void example() {
   int x = 0;
@@ -70,7 +66,14 @@ public class Foo {
   }
  }
 }
-     ]]></code>
+     ]]>
+    </code-fragment>
+    <test-code>
+        <description><![CDATA[
+Complicated method
+     ]]></description>
+        <expected-problems>2</expected-problems>
+        <code-ref id="basic-violation"/>
     </test-code>
     <test-code>
         <description><![CDATA[
@@ -83,4 +86,25 @@ public class Foo {
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description>
+        	<![CDATA[
+Testing new parameter showClassMethods
+     		]]>
+     	</description>
+        <rule-property name="showClassesComplexity">false</rule-property>
+        <expected-problems>1</expected-problems>
+       <code-ref id="basic-violation"/>
+    </test-code>
+    <test-code>
+        <description>
+        	<![CDATA[
+Testing new parameter showMethodsMethods
+     		]]>
+     	</description>
+        <rule-property name="showMethodsComplexity">false</rule-property>
+        <expected-problems>1</expected-problems>
+       <code-ref id="basic-violation"/>
+    </test-code>
+
 </test-data>
